--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,6 +14,14 @@
             background-color: #E4AB57;
             border-radius: 8px;
             padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+            position: relative;
+        }
+        .logout-btn {
+            position: absolute;
+            top: 20px;
+            right: 20px;
         }
         .depoimentos-container {
             margin-bottom: 20px;
@@ -26,87 +34,41 @@
             background-color: #fefefe;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
-        .depoimento img {
-            max-width: 150px;
-            height: auto;
-            border-radius: 8px;
-        }
-        .depoimento video {
+        .depoimento img, .depoimento video {
             max-width: 100%;
             height: auto;
             border-radius: 8px;
+            margin-bottom: 10px;
         }
         .depoimento h3 {
             margin-top: 0;
             font-size: 1.5rem;
             color: #333;
         }
-        .btn-primary {
-            background-color: #007bff;
-            border: none;
-            margin-top: 10px;
-            margin-bottom: 10px;
-        }
         .btn-danger {
             background-color: #dc3545;
             border: none;
+            margin-top: 10px;
+        }
+        .comment {
+            margin-left: 20px;
+            padding-left: 10px;
+            border-left: 2px solid #e0e0e0;
+        }
+        .comment p {
+            margin-bottom: 5px;
+        }
+        .comment button {
+            margin-top: 5px;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="depoimentos-container">
-            <h2>Depoimentos</h2>
-            <button class="btn btn-primary" data-toggle="modal" data-target="#depoimentoModal">Criar Depoimento</button>
-            <div id="depoimentosList"></div>
-        </div>
-    </div>
-
-    <!-- Modal -->
-    <div class="modal fade" id="depoimentoModal" tabindex="-1" role="dialog" aria-labelledby="depoimentoModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="depoimentoModalLabel">Criar Depoimento</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <form id="depoimentoForm" class="needs-validation" novalidate>
-                        <div class="form-group">
-                            <label for="nome">Nome:</label>
-                            <input type="text" id="nome" name="nome" class="form-control" required>
-                            <div class="invalid-feedback">Por favor, insira o nome.</div>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email:</label>
-                            <input type="email" id="email" name="email" class="form-control" required>
-                            <div class="invalid-feedback">Por favor, insira um email válido.</div>
-                        </div>
-                        <div class="form-group">
-                            <label for="telefone">Telefone:</label>
-                            <input type="text" id="telefone" name="telefone" class="form-control" required>
-                            <div class="invalid-feedback">Por favor, insira o telefone.</div>
-                        </div>
-                        <div class="form-group">
-                            <label for="texto">Texto:</label>
-                            <textarea id="texto" name="texto" class="form-control" required></textarea>
-                            <div class="invalid-feedback">Por favor, insira o texto do depoimento.</div>
-                        </div>
-                        <div class="form-group">
-                            <label for="foto">Foto:</label>
-                            <input type="file" id="foto" name="foto" class="form-control-file">
-                        </div>
-                        <div class="form-group">
-                            <label for="video">Video:</label>
-                            <input type="file" id="video" name="video" class="form-control-file">
-                        </div>
-                        <button type="submit" class="btn btn-primary">Enviar</button>
-                    </form>
-                </div>
-            </div>
-        </div>
+    <div class="container depoimentos-container" id="depoimentosContainer">
+        <button class="btn btn-secondary logout-btn" onclick="logout()">Logout</button>
+        <h2>Depoimentos</h2>
+        <input type="text" id="filtroNome" class="form-control mb-4" placeholder="Filtrar por nome" aria-label="Filtrar depoimentos por nome">
+        <div id="depoimentosList"></div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -114,60 +76,62 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            const depoimentoForm = document.getElementById('depoimentoForm');
+            const filtroNome = document.getElementById('filtroNome');
             const depoimentosList = document.getElementById('depoimentosList');
 
-            depoimentoForm.addEventListener('submit', async (event) => {
-                event.preventDefault();
-
-                if (depoimentoForm.checkValidity() === false) {
-                    event.stopPropagation();
-                    depoimentoForm.classList.add('was-validated');
-                    return;
-                }
-
-                const formData = new FormData(depoimentoForm);
-
-                try {
-                    const response = await fetch('/depoimentos', {
-                        method: 'POST',
-                        body: formData
-                    });
-
-                    if (response.ok) {
-                        alert('Depoimento criado com sucesso!');
-                        depoimentoForm.reset();
-                        depoimentoForm.classList.remove('was-validated');
-                        $('#depoimentoModal').modal('hide');
-                        carregarDepoimentos();
-                    } else {
-                        alert('Erro ao criar depoimento.');
-                    }
-                } catch (error) {
-                    console.error('Erro:', error);
-                }
+            filtroNome.addEventListener('input', () => {
+                carregarDepoimentos(filtroNome.value);
             });
 
-            async function carregarDepoimentos() {
+            async function carregarDepoimentos(filtro = '') {
                 try {
                     const response = await fetch('/depoimentos');
                     const depoimentos = await response.json();
 
                     depoimentosList.innerHTML = '';
-                    depoimentos.forEach(depoimento => {
-                        const depoimentoDiv = document.createElement('div');
-                        depoimentoDiv.className = 'depoimento';
-                        depoimentoDiv.innerHTML = `
-                            <h3>${depoimento.nome}</h3>
-                            <p>${depoimento.texto}</p>
-                            ${depoimento.fotoUrl ? `<img src="${depoimento.fotoUrl}" alt="Foto">` : ''}
-                            ${depoimento.videoUrl ? `<video src="${depoimento.videoUrl}" controls></video>` : ''}
-                            <button class="btn btn-danger mt-2" onclick="deletarDepoimento('${depoimento._id}')">Deletar</button>
-                        `;
-                        depoimentosList.appendChild(depoimentoDiv);
-                    });
+                    depoimentos
+                        .filter(depoimento => depoimento.nome.toLowerCase().includes(filtro.toLowerCase()))
+                        .reverse() // Inverter a ordem dos depoimentos
+                        .forEach(depoimento => {
+                            const depoimentoDiv = document.createElement('div');
+                            depoimentoDiv.className = 'depoimento';
+                            depoimentoDiv.innerHTML = `
+                                <h3>${depoimento.nome}</h3>
+                                ${depoimento.texto ? `<p>${depoimento.texto}</p>` : ''}
+                                ${depoimento.fotoUrl ? `<img src="${depoimento.fotoUrl}" alt="Foto do depoimento">` : ''}
+                                ${depoimento.videoUrl ? `<video src="${depoimento.videoUrl}" controls></video>` : ''}
+                                <button class="btn btn-danger mt-2" onclick="deletarDepoimento('${depoimento._id}')">Deletar Depoimento</button>
+                                <h4>Comentários</h4>
+                                <div id="comentarios-${depoimento._id}"></div>
+                            `;
+                            depoimentosList.appendChild(depoimentoDiv);
+                            carregarComentarios(depoimento._id);
+                        });
                 } catch (error) {
                     console.error('Erro ao carregar depoimentos:', error);
+                }
+            }
+
+            async function carregarComentarios(depoimentoId) {
+                try {
+                    const response = await fetch(`/depoimentos/${depoimentoId}/comentarios`);
+                    const comentarios = await response.json();
+
+                    const comentariosDiv = document.getElementById(`comentarios-${depoimentoId}`);
+                    comentariosDiv.innerHTML = '';
+                    comentarios
+                        .reverse() // Inverter a ordem dos comentários
+                        .forEach(comentario => {
+                            const comentarioDiv = document.createElement('div');
+                            comentarioDiv.className = 'comment';
+                            comentarioDiv.innerHTML = `
+                                <p><strong>${comentario.nome}</strong>: ${comentario.comentario}</p>
+                                <button class="btn btn-danger btn-sm" onclick="deletarComentario('${depoimentoId}', '${comentario._id}')">Excluir Comentário</button>
+                            `;
+                            comentariosDiv.appendChild(comentarioDiv);
+                        });
+                } catch (error) {
+                    console.error('Erro ao carregar comentários:', error);
                 }
             }
 
@@ -179,7 +143,7 @@
 
                     if (response.ok) {
                         alert('Depoimento deletado com sucesso!');
-                        carregarDepoimentos();
+                        carregarDepoimentos(filtroNome.value);
                     } else {
                         alert('Erro ao deletar depoimento.');
                     }
@@ -188,8 +152,41 @@
                 }
             };
 
+            window.deletarComentario = async (depoimentoId, comentarioId) => {
+                try {
+                    const response = await fetch(`/depoimentos/${depoimentoId}/comentarios/${comentarioId}`, {
+                        method: 'DELETE'
+                    });
+
+                    if (response.ok) {
+                        alert('Comentário deletado com sucesso!');
+                        carregarComentarios(depoimentoId);
+                    } else {
+                        alert('Erro ao deletar comentário.');
+                    }
+                } catch (error) {
+                    console.error('Erro ao deletar comentário:', error);
+                }
+            };
+
             carregarDepoimentos();
         });
+
+        async function logout() {
+            try {
+                const response = await fetch('/logout', {
+                    method: 'POST'
+                });
+
+                if (response.ok) {
+                    window.location.href = '/login';
+                } else {
+                    alert('Erro ao fazer logout.');
+                }
+            } catch (error) {
+                console.error('Erro ao fazer logout:', error);
+            }
+        }
     </script>
 </body>
 </html>
