--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,229 +1,270 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gestor Museu</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
     <style>
-        body {
-            padding: 20px;
-            background-color: #E4AB57;
-        }
-        .container {
-            background-color: #E4AB57;
-            border-radius: 8px;
-            padding: 20px;
-            max-width: 800px;
-            margin: 0 auto;
-            position: relative;
-        }
-        .logout-btn, .report-btn {
-            position: absolute;
-            top: 20px;
-        }
-        .logout-btn {
-            right: 20px;
-        }
-        .report-btn {
-            right: 120px;
-        }
-        .depoimentos-container {
-            margin-bottom: 20px;
-        }
-        .depoimento {
-            border: 1px solid #e0e0e0;
-            padding: 20px;
-            border-radius: 8px;
-            margin-bottom: 20px;
-            background-color: #fefefe;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        .depoimento img, .depoimento video {
-            max-width: 100%;
-            height: auto;
-            border-radius: 8px;
-            margin-bottom: 10px;
-        }
-        .depoimento h3 {
-            margin-top: 0;
-            font-size: 1.5rem;
-            color: #333;
-        }
-        .btn-danger {
-            background-color: #dc3545;
-            border: none;
-            margin-top: 10px;
-        }
-        .comment {
-            margin-left: 20px;
-            padding-left: 10px;
-            border-left: 2px solid #e0e0e0;
-        }
-        .comment p {
-            margin-bottom: 5px;
-        }
-        .comment button {
-            margin-top: 5px;
-        }
+      body {
+        padding: 20px;
+        background-color: #e4ab57;
+      }
+      .container {
+        background-color: #e4ab57;
+        border-radius: 8px;
+        padding: 20px;
+        max-width: 800px;
+        margin: 0 auto;
+        position: relative;
+      }
+      .logout-btn,
+      .report-btn {
+        position: absolute;
+        top: 20px;
+      }
+      .logout-btn {
+        right: 20px;
+      }
+      .report-btn {
+        right: 120px;
+      }
+      .depoimentos-container {
+        margin-bottom: 20px;
+      }
+      .depoimento {
+        border: 1px solid #e0e0e0;
+        padding: 20px;
+        border-radius: 8px;
+        margin-bottom: 20px;
+        background-color: #fefefe;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
+      .depoimento img,
+      .depoimento video {
+        max-width: 100%;
+        height: auto;
+        border-radius: 8px;
+        margin-bottom: 10px;
+      }
+      .depoimento h3 {
+        margin-top: 0;
+        font-size: 1.5rem;
+        color: #333;
+      }
+      .btn-danger {
+        background-color: #dc3545;
+        border: none;
+        margin-top: 10px;
+      }
+      .comment {
+        margin-left: 20px;
+        padding-left: 10px;
+        border-left: 2px solid #e0e0e0;
+      }
+      .comment p {
+        margin-bottom: 5px;
+      }
+      .comment button {
+        margin-top: 5px;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container depoimentos-container" id="depoimentosContainer">
-        <button class="btn btn-secondary logout-btn" onclick="logout()">Logout</button>
-        <button class="btn btn-primary report-btn" onclick="criarRelatorio()">Criar Relatório</button>
-        <h2>Depoimentos</h2>
-        <input type="text" id="filtroNome" class="form-control mb-4" placeholder="Filtrar por nome" aria-label="Filtrar depoimentos por nome">
-        <div id="depoimentosList"></div>
+      <button class="btn btn-secondary logout-btn" onclick="logout()">
+        Logout
+      </button>
+      <button class="btn btn-primary report-btn" onclick="criarRelatorio()">
+        Criar Relatório
+      </button>
+      <h2>Depoimentos</h2>
+      <input
+        type="text"
+        id="filtroNome"
+        class="form-control mb-4"
+        placeholder="Filtrar por nome"
+        aria-label="Filtrar depoimentos por nome"
+      />
+      <div id="depoimentosList"></div>
     </div>
 
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const filtroNome = document.getElementById('filtroNome');
-            const depoimentosList = document.getElementById('depoimentosList');
+      document.addEventListener("DOMContentLoaded", () => {
+        const filtroNome = document.getElementById("filtroNome");
+        const depoimentosList = document.getElementById("depoimentosList");
 
-            filtroNome.addEventListener('input', () => {
-                carregarDepoimentos(filtroNome.value);
-            });
+        filtroNome.addEventListener("input", () => {
+          carregarDepoimentos(filtroNome.value);
+        });
 
-            async function carregarDepoimentos(filtro = '') {
-                try {
-                    const response = await fetch('/depoimentos');
-                    const depoimentos = await response.json();
+        async function carregarDepoimentos(filtro = "") {
+          try {
+            const response = await fetch("/depoimentos");
+            const depoimentos = await response.json();
 
-                    depoimentosList.innerHTML = '';
-                    depoimentos
-                        .filter(depoimento => depoimento.nome.toLowerCase().includes(filtro.toLowerCase()))
-                        .reverse() // Inverter a ordem dos depoimentos
-                        .forEach(depoimento => {
-                            const depoimentoDiv = document.createElement('div');
-                            depoimentoDiv.className = 'depoimento';
-                            depoimentoDiv.innerHTML = `
+            depoimentosList.innerHTML = "";
+            depoimentos
+              .filter((depoimento) =>
+                depoimento.nome.toLowerCase().includes(filtro.toLowerCase())
+              )
+              .reverse() // Inverter a ordem dos depoimentos
+              .forEach((depoimento) => {
+                const depoimentoDiv = document.createElement("div");
+                depoimentoDiv.className = "depoimento";
+                depoimentoDiv.innerHTML = `
                                 <h3>${depoimento.nome}</h3>
-                                ${depoimento.texto ? `<p>${depoimento.texto}</p>` : ''}
-                                ${depoimento.fotoUrl ? `<img src="${depoimento.fotoUrl}" alt="Foto do depoimento">` : ''}
-                                ${depoimento.videoUrl ? `<video src="${depoimento.videoUrl}" controls></video>` : ''}
-                                <button class="btn btn-danger mt-2" onclick="deletarDepoimento('${depoimento._id}')">Deletar Depoimento</button>
+                                ${
+                                  depoimento.texto
+                                    ? `<p>${depoimento.texto}</p>`
+                                    : ""
+                                }
+                                ${
+                                  depoimento.fotoUrl
+                                    ? `<img src="${depoimento.fotoUrl}" alt="Foto do depoimento">`
+                                    : ""
+                                }
+                                ${
+                                  depoimento.videoUrl
+                                    ? `<video src="${depoimento.videoUrl}" controls></video>`
+                                    : ""
+                                }
+                                <button class="btn btn-danger mt-2" onclick="deletarDepoimento('${
+                                  depoimento._id
+                                }')">Deletar Depoimento</button>
                                 <h4>Comentários</h4>
                                 <div id="comentarios-${depoimento._id}"></div>
                             `;
-                            depoimentosList.appendChild(depoimentoDiv);
-                            carregarComentarios(depoimento._id);
-                        });
-                } catch (error) {
-                    console.error('Erro ao carregar depoimentos:', error);
-                }
-            }
+                depoimentosList.appendChild(depoimentoDiv);
+                carregarComentarios(depoimento._id);
+              });
+          } catch (error) {
+            console.error("Erro ao carregar depoimentos:", error);
+          }
+        }
 
-            async function carregarComentarios(depoimentoId) {
-                try {
-                    const response = await fetch(`/depoimentos/${depoimentoId}/comentarios`);
-                    const comentarios = await response.json();
+        async function carregarComentarios(depoimentoId) {
+          try {
+            const response = await fetch(
+              `/depoimentos/${depoimentoId}/comentarios`
+            );
+            const comentarios = await response.json();
 
-                    const comentariosDiv = document.getElementById(`comentarios-${depoimentoId}`);
-                    comentariosDiv.innerHTML = '';
-                    comentarios
-                        .reverse() // Inverter a ordem dos comentários
-                        .forEach(comentario => {
-                            const comentarioDiv = document.createElement('div');
-                            comentarioDiv.className = 'comment';
-                            comentarioDiv.innerHTML = `
+            const comentariosDiv = document.getElementById(
+              `comentarios-${depoimentoId}`
+            );
+            comentariosDiv.innerHTML = "";
+            comentarios
+              .reverse() // Inverter a ordem dos comentários
+              .forEach((comentario) => {
+                const comentarioDiv = document.createElement("div");
+                comentarioDiv.className = "comment";
+                comentarioDiv.innerHTML = `
                                 <p><strong>${comentario.nome}</strong>: ${comentario.comentario}</p>
                                 <button class="btn btn-danger btn-sm" onclick="deletarComentario('${depoimentoId}', '${comentario._id}')">Excluir Comentário</button>
                             `;
-                            comentariosDiv.appendChild(comentarioDiv);
-                        });
-                } catch (error) {
-                    console.error('Erro ao carregar comentários:', error);
-                }
-            }
-
-            window.deletarDepoimento = async (id) => {
-                try {
-                    const response = await fetch(`/depoimentos/${id}`, {
-                        method: 'DELETE'
-                    });
-
-                    if (response.ok) {
-                        alert('Depoimento deletado com sucesso!');
-                        carregarDepoimentos(filtroNome.value);
-                    } else {
-                        alert('Erro ao deletar depoimento.');
-                    }
-                } catch (error) {
-                    console.error('Erro ao deletar depoimento:', error);
-                }
-            };
-
-            window.deletarComentario = async (depoimentoId, comentarioId) => {
-                try {
-                    const response = await fetch(`/depoimentos/${depoimentoId}/comentarios/${comentarioId}`, {
-                        method: 'DELETE'
-                    });
-
-                    if (response.ok) {
-                        alert('Comentário deletado com sucesso!');
-                        carregarComentarios(depoimentoId);
-                    } else {
-                        alert('Erro ao deletar comentário.');
-                    }
-                } catch (error) {
-                    console.error('Erro ao deletar comentário:', error);
-                }
-            };
-
-            carregarDepoimentos();
-        });
-
-        async function logout() {
-            try {
-                const response = await fetch('/logout', {
-                    method: 'POST'
-                });
-
-                if (response.ok) {
-                    window.location.href = '/login';
-                } else {
-                    alert('Erro ao fazer logout.');
-                }
-            } catch (error) {
-                console.error('Erro ao fazer logout:', error);
-            }
+                comentariosDiv.appendChild(comentarioDiv);
+              });
+          } catch (error) {
+            console.error("Erro ao carregar comentários:", error);
+          }
         }
 
-        async function criarRelatorio() {
-            const { jsPDF } = window.jspdf;
-            const response = await fetch('/depoimentos');
-            const depoimentos = await response.json();
-
-            const doc = new jsPDF();
-
-            doc.setFontSize(18);
-            doc.text('Relatório de Depoimentos', 20, 20);
-
-            let y = 30;
-            depoimentos.forEach(depoimento => {
-                doc.setFontSize(12);
-                doc.text(`Nome: ${depoimento.nome}`, 20, y);
-                doc.text(`Email: ${depoimento.email ? depoimento.email : 'Não fornecido'}`, 20, y + 10);
-                doc.text(`Telefone: ${depoimento.telefone ? depoimento.telefone : 'Não fornecido'}`, 20, y + 20);
-                y += 40;
-
-                // Desenhar uma linha após cada bloco de informação
-                doc.setLineWidth(0.5);
-                doc.line(10, y - 5, 200, y - 5);
-
-                if (y > 270) { // Adicionar nova página se necessário
-                    doc.addPage();
-                    y = 20;
-                }
+        window.deletarDepoimento = async (id) => {
+          try {
+            const response = await fetch(`/depoimentos/${id}`, {
+              method: "DELETE",
             });
 
-            doc.save('relatorio_depoimentos.pdf');
+            if (response.ok) {
+              alert("Depoimento deletado com sucesso!");
+              carregarDepoimentos(filtroNome.value);
+            } else {
+              alert("Erro ao deletar depoimento.");
+            }
+          } catch (error) {
+            console.error("Erro ao deletar depoimento:", error);
+          }
+        };
+
+        window.deletarComentario = async (depoimentoId, comentarioId) => {
+          try {
+            const response = await fetch(
+              `/depoimentos/${depoimentoId}/comentarios/${comentarioId}`,
+              {
+                method: "DELETE",
+              }
+            );
+
+            if (response.ok) {
+              alert("Comentário deletado com sucesso!");
+              carregarComentarios(depoimentoId);
+            } else {
+              alert("Erro ao deletar comentário.");
+            }
+          } catch (error) {
+            console.error("Erro ao deletar comentário:", error);
+          }
+        };
+
+        carregarDepoimentos();
+      });
+
+      async function logout() {
+        try {
+          const response = await fetch("/logout", {
+            method: "POST",
+          });
+
+          if (response.ok) {
+            window.location.href = "/login";
+          } else {
+            alert("Erro ao fazer logout.");
+          }
+        } catch (error) {
+          console.error("Erro ao fazer logout:", error);
         }
+      }
+
+      async function criarRelatorio() {
+    const { jsPDF } = window.jspdf;
+    const response = await fetch('/depoimentos');
+    const depoimentos = await response.json();
+
+    const doc = new jsPDF();
+
+    doc.setFontSize(18);
+    doc.text('Relatório de Depoimentos', 20, 20);
+
+    let y = 30;
+    depoimentos.forEach(depoimento => {
+        doc.setFontSize(12);
+        doc.text(`Nome: ${depoimento.nome}`, 20, y);
+        doc.text(`Email: ${depoimento.email ? depoimento.email : 'Não fornecido'}`, 20, y + 10);
+        doc.text(`Telefone: ${depoimento.telefone ? depoimento.telefone : 'Não fornecido'}`, 20, y + 20);
+        y += 35; // Reduzi o espaçamento entre os depoimentos
+
+        // Desenhar uma linha após cada bloco de informação
+        doc.setLineWidth(0.5);
+        doc.line(20, y - 5, 200, y - 5); // Ajuste a posição da linha para alinhar com o texto
+
+        y += 5; // Espaço após a linha
+
+        if (y > 270) { // Adicionar nova página se necessário
+            doc.addPage();
+            y = 20;
+        }
+    });
+
+    doc.save('relatorio_depoimentos.pdf');
+}
+
     </script>
-</body>
+  </body>
 </html>
